--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -66,7 +66,7 @@
 					for (var i = 0; i < results.length; i++){
 						$scope.cards.push({
 				        	title: results[i].title,
-				        	content: results[i].content
+				        	content: results[i].category
 				    	});
 					}
 				}
