Personalized View fix for check boxes

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -388,7 +388,7 @@
 				<section layout="row" layout-sm="column"
 					layout-align="center center">
 					<div>
-						<md-checkbox ng-model="data.cb1" aria-label="Checkbox 1">
+						<md-checkbox ng-model="categoryCheck" aria-label="categoryCheck" id="categoryCheckBox">
 						{{category}} </md-checkbox>
 					</div>
 					<md-slider md-theme="blue" flex ng-model="rating" min="0" max="10"
