--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -81,6 +81,7 @@
 				if (resultCount != 0) {
 					for (var i = 0; i < results.length; i++) {
 						$scope.cards.push({
+							id : results[i].id,
 							title : results[i].title,
 							publishedDate : results[i].publishedDate,
 							content : results[i].content
@@ -187,6 +188,20 @@
 
 		$scope.showArticle = function($event, $cardo) {
 			$scope.alert = '';
+			
+			$http({
+				method : 'POST',
+				url : 'http://localhost:8080/UB535p3WebApp/ClickRegisterer',
+				headers : {
+					'Content-Type' : 'application/text',
+					'docId' : $cardo.id
+				},
+				data : $scope.user
+			}).success(function(data) {
+				$scope.status = data;
+				console.log(data);
+			});
+			
 			$mdBottomSheet.show({
 				templateUrl : 'viewArticle.html',
 				controller : 'viewArticleCtrl',
@@ -198,36 +213,57 @@
 				$scope.alert = clickedItem.name + ' clicked!';
 			});
 		};
-		$scope.cards = [
-
-		];
+		$scope.cards = [];
+		$scope.users = [];
 		$scope.inita = function() {
-			// check if there is query in url
-			// and fire search in case its value is not empty
-			console.log('asds');
-			$mdDialog.show({
-				controller : DialogController,
-				templateUrl : 'userSelectionDialog.html',
-				targetEvent : null,
-			}).then(function(loginUser) {
-				console.log(loginUser);
+			$http({
+				method : 'POST',
+				url : 'http://localhost:8080/UB535p3WebApp/GetUsersServlet',
+				headers : {
+					'Content-Type' : 'application/text',
+				},
+				data : $scope.user
+			}).success(function(data) {
+				$scope.status = data;
+				console.log(data);
+				var results = data.users;
+				for (var i = 0; i < results.length; i++) {
+					$scope.users.push({
+						id : results[i].id,
+						name : results[i].name
+					});
+				}
+				
 
-				$http({
-					method : 'POST',
-					url : 'http://localhost:8080/UB535p3WebApp/UserLogin',
-					headers : {
-						'Content-Type' : 'application/text',
-						'userId' : loginUser
-					},
-					data : $scope.user
-				}).success(function(data) {
-					$scope.status = data;
-					console.log(data);
+				$mdDialog.show({
+					controller : DialogController,
+					templateUrl : 'userSelectionDialog.html',
+					targetEvent : null,
+					locals : {
+						userss : $scope.users
+					}
+				}).then(function(loginUser) {
+					console.log(loginUser);
+
+					$http({
+						method : 'POST',
+						url : 'http://localhost:8080/UB535p3WebApp/UserLogin',
+						headers : {
+							'Content-Type' : 'application/text',
+							'userId' : loginUser
+						},
+						data : $scope.user
+					}).success(function(data) {
+						$scope.status = data;
+						console.log(data);
+					});
+
+				}, function() {
+					$scope.alert = 'You cancelled the dialog.';
 				});
-
-			}, function() {
-				$scope.alert = 'You cancelled the dialog.';
+				
 			});
+			
 		};
 		// and fire it after definition
 		$scope.inita();
@@ -241,7 +277,8 @@
 		};
 	}
 
-	function DialogController($scope, $mdDialog) {
+	function DialogController($scope, $mdDialog, userss) {
+		$scope.users = userss;
 		$scope.hide = function() {
 			$mdDialog.hide();
 		};
