--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,6 +27,8 @@
 <link rel="stylesheet" href="js/angular-material/themes/cyan-theme.css">
 <link rel="stylesheet"
 	href="js/angular-material/themes/light-blue-dark-theme.css">
+	<link rel="stylesheet"
+	href="js/angular-material/themes/blue-theme.css">
 <link rel="stylesheet" href="js/angular-material/themes/red-theme.css">
 
 
@@ -161,7 +163,7 @@
 
 		$scope.showArticle = function($event, $cardo) {
 			$scope.alert = '';
-			
+
 			$http({
 				method : 'POST',
 				url : 'http://localhost:8080/UB535p3WebApp/ClickRegisterer',
@@ -174,7 +176,7 @@
 				$scope.status = data;
 				console.log(data);
 			});
-			
+
 			$mdBottomSheet.show({
 				templateUrl : 'viewArticle.html',
 				controller : 'viewArticleCtrl',
@@ -196,60 +198,76 @@
 					'Content-Type' : 'application/text',
 				},
 				data : $scope.user
-			}).success(function(data) {
-				$scope.status = data;
-				console.log(data);
-				var results = data.users;
-				for (var i = 0; i < results.length; i++) {
-					$scope.users.push({
-						id : results[i].id,
-						name : results[i].name
-					});
-				}
-				
+			})
+					.success(
+							function(data) {
+								$scope.status = data;
+								console.log(data);
+								var results = data.users;
+								for (var i = 0; i < results.length; i++) {
+									$scope.users.push({
+										id : results[i].id,
+										name : results[i].name
+									});
+								}
 
-				$mdDialog.show({
-					controller : DialogController,
-					templateUrl : 'userSelectionDialog.html',
-					targetEvent : null,
-					locals : {
-						userss : $scope.users
-					}
-				}).then(function(loginUser) {
-					console.log(loginUser);
+								$mdDialog
+										.show(
+												{
+													controller : DialogController,
+													templateUrl : 'userSelectionDialog.html',
+													targetEvent : null,
+													locals : {
+														userss : $scope.users
+													}
+												})
+										.then(
+												function(loginUser) {
+													console.log(loginUser);
 
-					$http({
-						method : 'POST',
-						url : 'http://localhost:8080/UB535p3WebApp/UserLogin',
-						headers : {
-							'Content-Type' : 'application/text',
-							'userId' : loginUser
-						},
-						data : $scope.user
-					}).success(function(data) {
-						$scope.status = data;
-						console.log(data);
-						$http({
-							method : 'POST',
-							url : 'http://localhost:8080/UB535p3WebApp/Categories',
-							headers : {
-								'Content-Type' : 'application/text',
-								'userId' : loginUser
-							},
-							data : $scope.allcategories
-						}).success(function(data) {
-							$scope.status = data;
-							console.log(data);
-							$scope.categories = data.results;
-						});
-					});
+													$http(
+															{
+																method : 'POST',
+																url : 'http://localhost:8080/UB535p3WebApp/UserLogin',
+																headers : {
+																	'Content-Type' : 'application/text',
+																	'userId' : loginUser
+																},
+																data : $scope.user
+															})
+															.success(
+																	function(
+																			data) {
+																		$scope.status = data;
+																		console
+																				.log(data);
+																		$http(
+																				{
+																					method : 'POST',
+																					url : 'http://localhost:8080/UB535p3WebApp/Categories',
+																					headers : {
+																						'Content-Type' : 'application/text',
+																						'userId' : loginUser
+																					},
+																					data : $scope.allcategories
+																				})
+																				.success(
+																						function(
+																								data) {
+																							$scope.status = data;
+																							console
+																									.log(data);
+																							$scope.categories = data.results;
+																						});
+																	});
 
-				}, function() {
-					$scope.alert = 'You cancelled the dialog.';
-				});
-				
-			});
-			
+												},
+												function() {
+													$scope.alert = 'You cancelled the dialog.';
+												});
+
+							});
+
 		};
 		// and fire it after definition
 		$scope.inita();
@@ -413,7 +431,8 @@
 		</md-sidenav>
 
 
-		<md-sidenav id= "userPreferencesSideNav" class="md-sidenav-right md-whiteframe-z2"
+		<md-sidenav id="userPreferencesSideNav"
+			class="md-sidenav-right md-whiteframe-z2"
 			component_id="userPreferencesSideNav" md-theme="blue-grey">
 		<md-toolbar class="md-theme-light">
 		<h1 class="md-toolbar-tools">UPDATE USER PREFERENCES</h1>
@@ -421,18 +440,17 @@
 		<div ng-controller="PersonalisationController">
 
 			<div ng-repeat="category in categories" layout>
-				<section layout="row" layout-sm="column"
-					layout-align="center center">
-					<div>
-						<md-checkbox ng-model="categoryCheck" aria-label="categoryCheck" id="categoryCheckBox">
-						{{category}} </md-checkbox>
-					</div>
-					<md-slider md-theme="blue" flex ng-model="rating" min="0" max="10"
-						aria-label="rating" id="rating-slider"> </md-slider>
-					<div flex="20" layout layout-align="center center">
-						<input type="number" ng-model="rating" aria-label="rating"
-							aria-controls="rating-slider" min="0" max="10">
-				</section>
+				<div>
+					<md-checkbox ng-model="categoryCheck" aria-label="categoryCheck"
+						id="categoryCheckBox"> {{category}} </md-checkbox>
+				</div>
+				<div flex="20" layout layout-align="center center">
+					<input type="number" ng-model="rating" aria-label="rating"
+						aria-controls="rating-slider" min="0" max="10">
+				</div>
+				<md-slider md-theme="blue" flex ng-model="rating" min="0" max="10"
+					aria-label="rating" id="rating-slider"> </md-slider>
+
 			</div>
 
 		</div>
