--- a/WebContent/viewArticle.html
+++ b/WebContent/viewArticle.html
@@ -1,15 +1,34 @@
-<md-bottom-sheet class="md-list md-has-header" style="height:100%;">
-  <md-subheader>Comment Actions</md-subheader>
-  <h2>{{card.content}}</h2>
-<!-- 
-  <md-list>
-  <md-item ng-repeat="item in items">
-      <md-button aria-label="{{item.name}}" ng-click="listItemClick($index)">
-        Using custom inline icon until md-icon is ready. DONT USE ME! 
-        <md-inline-list-icon icon="{{item.icon}}"></md-inline-list-icon>
-        <span class="md-inline-list-icon-label">{{ item.name }}</span>
-      </md-button>
-    </md-item>
-  </md-list>
-   -->
+<md-bottom-sheet class="md-list md-has-header" 
+	style="height:100%; padding:0px;">
+  <md-content>
+  <md-toolbar md-theme="blue-grey">
+    <div class="md-toolbar-tools">
+      <span class="md-flex">{{card.title}}</span>
+    </div>
+  </md-toolbar>
+	<p style="font-weight: 300; font-size: 12px; padding-left: 15px;">
+		{{card.content}}
+	</p>
+	</md-content>
+	<div class="md-actions" layout="row" style="padding:50px;">
+    <md-button ng-click="answer('useful')" class="md-primary" md-theme="blue-grey">
+      *
+    </md-button>
+    <md-button ng-click="answer('useful')" class="md-primary" md-theme="blue-grey">
+      *
+    </md-button>
+    <md-button ng-click="answer('useful')" class="md-primary" md-theme="blue-grey">
+      *
+    </md-button>
+    <md-button ng-click="answer('useful')" class="md-primary" md-theme="blue-grey">
+      *
+    </md-button>
+    <md-button ng-click="answer('useful')" class="md-primary" md-theme="blue-grey">
+      *
+    </md-button>
+    <span flex></span>
+    <md-button ng-click="hide ()" class="md-primary" md-theme="blue-grey">
+      HIDE
+    </md-button>
+  </div>
 </md-bottom-sheet>
