--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -51,6 +51,7 @@
 
 		$scope.user = {};
 		$scope.categories = {};
+		$scope.categoriesAndLikeScore = [];
 		$scope.theme = 'green';
 		$scope.nonThemed = '#259b24';
 		$scope.createUser = function() {
@@ -157,8 +158,8 @@
 			$mdSidenav('userPreferencesSideNav').toggle()
 		};
 		$scope.closePreferences = function() {
-			$scope.alert = 'Rating is ' + $scope.rating + '. Checkbox value = '
-					+ $scope.data.cb1;
+			$scope.alert = 'Rating is ' + $scope.liking + '. Checkbox value = '
+					+ $scope.categoryCheck;
 			$mdSidenav('userPreferencesSideNav').toggle()
 		};
 		
@@ -250,7 +251,7 @@
 																						'Content-Type' : 'application/text',
 																						'userId' : loginUser
 																					},
-																					data : $scope.allcategories
+																					data : $scope.allcategoriesAndLikeScore
 																				})
 																				.success(
 																						function(
@@ -419,7 +420,7 @@
 			Kumar </md-button>
 		</p>
 		<p style="padding-left: 15px; padding-top: 100px;">
-			<md-button ng-click="close ()" class="md-primary"> Close
+			<md-button ng-click="close ()" class="md-raised"> Close
 			</md-button>
 		</p>
 
@@ -432,7 +433,7 @@
 		<md-toolbar class="md-theme-light">
 		<h1 class="md-toolbar-tools">UPDATE USER PREFERENCES</h1>
 		</md-toolbar>
-		<div ng-controller="PersonalisationController">
+		<div>
 
 			<div ng-repeat="category in categories" layout>
 				<div>
@@ -440,17 +441,17 @@
 						id="categoryCheckBox"> {{category}} </md-checkbox>
 				</div>
 				<div flex="20" layout layout-align="center center">
-					<input type="number" ng-model="rating" aria-label="rating"
-						aria-controls="rating-slider" min="0" max="10">
+					<input type="number" ng-model="liking" aria-label="liking"
+						aria-controls="liking-slider" min="0" max="10">
 				</div>
-				<md-slider md-theme="blue" flex ng-model="rating" min="0" max="10"
-					aria-label="rating" id="rating-slider"> </md-slider>
+				<md-slider md-theme="blue" flex ng-model="liking" min="0" max="10"
+					aria-label="liking" id="liking-slider"> </md-slider>
 
 			</div>
 
 		</div>
-		<p style="padding-top: 100px;">
-			<md-button ng-click="closePreferences ()" class="md-primary">
+		<p style="padding-left: 15px; padding-top: 100px;">
+			<md-button ng-click="closePreferences ()" class="md-raised">
 			Close </md-button>
 		</p>
 	</div>
