Updating Click Count on Document Clicks and Removing Hard Coding For User Ids. User Id now moves in the session

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -136,9 +136,11 @@
 					if (resultCount != 0) {
 						for (var i = 0; i < results.length; i++) {
 							$scope.personalizedCards.push({
+								id : results[i].id,
 								title : results[i].title,
 								publishedDate : results[i].publishedDate,
-								content : results[i].content
+								content : results[i].content,
+								snippet : results[i].snippet
 							});
 						}
 					}
