Regression Fix - Had removed important code that was showing user names in entry dialog

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -234,6 +234,7 @@
 					carda : $cardo
 				}
 			}).then(function(clickedItem) {
+				$scope.alert = clickedItem.name + ' clicked!';
 			});
 		};
 
@@ -256,6 +257,7 @@
 				for (var i = 0; i < results.length; i++) {
 					$scope.users.push({
 						id : results[i].id,
+						name : results[i].name
 					});
 				}
 
