--- a/WebContent/viewArticle.html
+++ b/WebContent/viewArticle.html
@@ -19,7 +19,7 @@
 
 	</div>
 	<span flex></span>
-	<md-button ng-click="hide ()" class="md-primary" md-theme="blue-grey">
-	HIDE </md-button>
+	<md-button ng-click="hideArticle (card.id, card.documentRating)"
+		class="md-primary" md-theme="blue-grey"> HIDE </md-button>
 </div>
 </md-bottom-sheet>
