Fix : Had missed mapping the Search Results view with rating backend

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -517,7 +517,7 @@
 							<p style="font-weight: 300; font-size: 14px; padding-left: 15px;">
 								{{card.snippet}}</p>
 							<div ng-controller="RatingDemoCtrl">
-								<rating ng-model="rate" max="max" readonly="isReadonly"
+								<rating ng-model="card.documentRating" max="max" readonly="isReadonly"
 									state-on="'glyphicon-star'" state-off="'glyphicon-star-empty'"
 									on-hover="hoveringOver(value)" on-leave="overStar = null"></rating>
 								<span class="label"
