Bootstrap CSS replacing the min version

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -45,7 +45,7 @@
 
 <script src="js/angular/angular.js"></script>
 <script src="js/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap.css" rel="stylesheet">
 <script>
 	
 </script>
